--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     },
     "devDependencies": {},
     "scripts": {
+        "build": "tsc",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
